--- a/photo-wall/index.html
+++ b/photo-wall/index.html
@@ -308,4 +308,18 @@
 	</div>
 
 
-</body></html>
+</body>
+<script type="text/javascript">
+
+    $(document).keyup(function(e) {
+        if (e.keyCode == 27) {
+            setTimeout(function() {
+                window.location.href = "../love-time/index.html";
+            }, 5000);
+        }
+    });
+
+
+</script>
+
+</html>
