--- a/snake/frog.html
+++ b/snake/frog.html
@@ -336,11 +336,11 @@
         //todo
         var altHighScore = function(score_val){
             ele_high_score.innerHTML = String(score_val);
-            if (score_val == 4){
+            if (score_val == 14){
                 showScreen(4);
                 setTimeout(function() {
-                    window.location.href = "../photo-wall/index.html";
-                }, 5000);
+                    window.location.href = "https://google.com";
+                }, 6000);
                 throw new Error();
 
             }
