add heart buuble effect

--- a/photo-wall/index.html
+++ b/photo-wall/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 	<!-- Title -->
-	<title>Vy Nghĩa ❤ Trọng Nghĩa</title>
+	<title>F ❤ F</title>
 
 	<!-- Default CSS -->
 	<link rel="stylesheet" href="css/all.css">
@@ -16,47 +16,70 @@
 	<!-- <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'> -->
 	<link href="https://fonts.googleapis.com/css?family=Loved+by+the+King" rel="stylesheet">
 </head>
-<body>
+<body id = "body231" onload="heart()">
 
 	<!-- Browser no support JavaScript -->
 	<noscript><div id="nojavascript" class="nojavascript">Vui lòng bật JavaScript trong trình duyệt của bạn lên.</div></noscript>
+	<script src="Bubbles.js"></script>
+	<script>
+        var heartvar = 0;
+        var miniheartvar = 0;
+
+        function heart()
+        {
+            CreateBubble();
+
+            if(++heartvar < 2)
+                setTimeout(heart, 1000);
+        }
+
+        function miniheart()
+        {
+            CreateBubble(true);
+
+            if(++miniheartvar < 2)
+                setTimeout(miniheart, 1000);
+        }
+
+	</script>
+
 
 	<!-- Love -->
 	<div class="flowtime">
 		<div class="ft-section section-1" data-id="section-1">
 			<div id="/section-1/page-1" class="ft-page page-1" data-id="page-1">
-				<p class="text1"><span id="text-75" >Vy Nghĩa</span> ❤ <span id="text-76" >Trọng Nghĩa</span> </p>
+				<p class="text1"><span id="text-75" >F</span> ❤ <span id="text-76" >F</span> </p>
 				<p class="text2">Nhấn phím "↓" <span id="text-78" >từ từ để trải nghiệm</span></p>
 			</div>
 			<div id="/section-1/page-2" class="ft-page page-2" data-id="page-2">
 				<p class="top-text" id="text-1" >Khi thiếu bóng dáng em, trong tim anh trống rỗng.</p>
-				<img src='img/iali63.jpg'  alt="过去的小明一直是一个人生活，享受着孤独，也憧憬着爱情。" />
+				<img src='img/iali63.jpg'   />
 			</div>
 			<div id="/section-1/page-3" class="ft-page page-3 left-img" data-id="page-3">
 				<h2 class="text" id="text-2" >Cảm thấy lạc lõng...</h2>
-				<img src='img/iali35.jpg'  alt="一个人的长廊"/>
+				<img src='img/iali35.jpg'  />
 			</div>
 			<div id="/section-1/page-4" class="ft-page page-4 full-img" data-id="page-4">
 				<h2 class="center-text" id="text-3" >... và cô đơn.</h2>
-				<img src='img/iali6.jpg'  alt="一个人的山岗" />
+				<img src='img/iali6.jpg'   />
 			</div>
 		</div>
 		<div class="ft-section section-2" data-id="section-2">
 			<div id="/section-2/page-1" class="ft-page page-5 full-img" data-id="page-1">
 				<h2 class="center-text" id="text-4" >Trong đầu luôn chứa những nội tâm.</h2>
-				<img src='img/iali19.jpg'  alt="一个人的山岗" />
+				<img src='img/iali19.jpg'   />
 			</div>
 			<div id="/section-2/page-2" class="ft-page page-6" data-id="page-2">
 				<h2 class="center-text" id="text-5" >Anh muốn bay thật cao để tìm em!</h2>
-				<img src='img/iali29.jpg' alt="一个人的游乐场"/>
+				<img src='img/iali29.jpg' />
 			</div>
 			<div id="/section-2/page-3" class="ft-page page-7" data-id="page-3">
 				<h3 id="text-6" >Anh vẫn lạc quan, mĩm cười, chờ đợi.</h3>
-				<img src='img/iali60.jpg'  alt="但他依然乐观，微笑着，等待着"/>
+				<img src='img/iali60.jpg'  />
 			</div>
 			<div id="/section-2/page-4" class="ft-page page-8 full-img" data-id="page-4">
 				<h3 id="text-7" >Dù cuộc sống không thể tránh khỏi trắc trở...</h3>
-				<img src='img/iali51.jpg' alt="生活难免有风风雨雨" />
+				<img src='img/iali51.jpg'  />
 			</div>
 			<div id="/section-2/page-5" class="ft-page page-9" data-id="page-5">
 				<h3 id="text-8" >Những anh vẫn luôn đối phó để dành lấy bình yên!</h3>
@@ -77,7 +100,7 @@
 				<img src='img/iali25.jpg' />
 			</div>
 			<div id="/section-3/page-3" class="ft-page page-13" data-id="page-3">
-				<img src='img/iali64.jpg' alt='可是小明的爱情又在哪里呢？' />
+				<img src='img/iali64.jpg'  />
 				<h3 id="text-13" >Anh không biết... tình yêu ở đâu?</h3>
 			</div>
 			<div id="/section-3/page-4" class="ft-page page-14 left-img" data-id="page-4">
@@ -268,7 +291,7 @@
 				<img src='img/iali20.jpg'  />
 			</div>
 			<div id="/section-9/page-2" class="ft-page page-53" data-id="page-2">
-				<img src='img/iali68.jpg' alt='happy birthday' />
+				<img src='img/iali68.jpg' />
 				<h3 id="text-72" >Happy Valentine Day's</h3>
 			</div>
 			<div id="/section-9/page-3" class="ft-page page-54 center-img" data-id="page-3" >
@@ -302,9 +325,12 @@
 <script type="text/javascript">
     $(document).keyup(function(e) {
         if (e.keyCode == 27) {
+            $("body").css("background-color", "#bc84fe");
+
+            miniheart();
             setTimeout(function() {
                 window.location.href = "../love-time/index.html";
-            }, 5000);
+            }, 8000);
         }
     });
 </script>
